--- a/src/xxfs_dbproxy.conf
+++ b/src/xxfs_dbproxy.conf
@@ -1,5 +1,5 @@
 
-# configuration file for jiayuan_dbproxy
+# configuration file for xxfs_dbproxy
 
 # ******************************************************
 # *************  IMPORTANT configs *********************
